test_regress/t/t_select_bad_tri.out
%Error: t/t_select_bad_tri.v:11:13: Selection index is constantly unknown or tristated: lsb=7'bxxxxxxx width=32'sh47
                                  : ... In instance t
      if (in[(   (1'h0 / 1'b0)   )+:71] != 71'h0) $stop;
            ^
%Error: Exiting due to
